--- a/package.json
+++ b/package.json
@@ -17,68 +17,68 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-email/components": "0.5.1",
     "@types/bcrypt": "^6.0.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/marked": "^6.0.0",
-    "@types/nodemailer": "^7.0.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/nprogress": "^0.2.3",
-    "@types/qrcode": "^1.5.5",
+    "@types/qrcode": "^1.5.6",
     "add": "^2.0.6",
     "bcrypt": "^6.0.0",
     "bunx": "^0.1.0",
-    "canvas-confetti": "^1.9.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.44.5",
+    "drizzle-orm": "^0.44.7",
     "fedapay": "^1.2.5",
-    "framer-motion": "^12.23.12",
-    "html-to-image": "^1.11.11",
-    "i18next": "^25.3.4",
+    "framer-motion": "^12.23.26",
+    "html-to-image": "^1.11.13",
+    "i18next": "^25.7.3",
     "input": "^1.0.1",
     "jspdf": "^2.5.2",
-    "ky": "^1.9.1",
+    "ky": "^1.14.1",
     "lucide-react": "^0.539.0",
-    "marked": "^16.2.1",
-    "next": "15.4.6",
-    "next-i18next": "^15.4.2",
+    "marked": "^16.4.2",
+    "next": "^16.1.0",
+    "next-i18next": "^15.4.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^1.6.12",
-    "nodemailer": "^7.0.6",
+    "nodemailer": "^7.0.11",
     "nprogress": "^0.2.0",
     "pg": "^8.16.3",
-    "phone": "^3.1.67",
+    "phone": "^3.1.68",
     "qrcode": "^1.5.4",
-    "react": "19.1.1",
-    "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.1",
+    "react": "^19.2.3",
+    "react-day-picker": "^9.13.0",
+    "react-dom": "^19.2.3",
     "react-email": "4.2.8",
-    "react-i18next": "^15.6.1",
-    "shadcn": "^3.0.0",
+    "react-i18next": "^15.7.4",
+    "shadcn": "^3.6.2",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/pg": "^8.15.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^20.19.27",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "drizzle-kit": "^0.31.8",
+    "eslint": "^9.39.2",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-motion": "^1.1.1",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
